# snippets-jerenyon-dev

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/infrastructure/: databaseManager.py  quickbaseWrapperLite.py
