[tool.poetry]
package-mode = false
name = "template-repo-python"
version = "1.0.0"
description = "A template repository for Python projects."
authors = ["jayseregon <jayseregon@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiofiles = ">=24.1.0"
aiosqlite = ">=0.20.0"
amqp = ">=5.3.1"
annotated-types = ">=0.7.0"
anyio = ">=4.6.2.post1"
appnope = ">=0.1.4"
arcgis = ">=2.4.0"
argon2-cffi = ">=23.1.0"
argon2-cffi-bindings = ">=21.2.0"
arrow = ">=1.3.0"
asgiref = ">=3.8.1"
asttokens = ">=2.4.1"
async-lru = ">=2.0.4"
attrs = ">=24.2.0"
azure-core = ">=1.32.0"
azure-storage-blob = ">=12.24.0"
babel = ">=2.16.0"
backcall = ">=0.2.0"
beautifulsoup4 = ">=4.12.3"
billiard = ">=4.2.1"
bleach = ">=6.2.0"
brotli = ">=1.1.0"
Brotli = ">=1.1.0"
cachetools = ">=5.5.0"
celery = ">=5.4.0"
certifi = ">=2024.8.30"
cffi = ">=1.17.1"
cfgv = ">=3.4.0"
charset-normalizer = ">=3.4.0"
click = ">=8.1.7"
click-didyoumean = ">=0.3.1"
click-plugins = ">=1.1.1"
click-repl = ">=0.3.0"
cligj = ">=0.7.2"
cloudpickle = ">=3.1.0"
colorlog = ">=6.8.2"
comm = ">=0.1.4"
contourpy = ">=1.3.0"
crispy-bootstrap5 = ">=2024.10"
cron-descriptor = ">=1.4.5"
cryptography = ">=43.0.3"
cssselect2 = ">=0.7.0"
cycler = ">=0.12.1"
dask = { extras = ["dataframe"], version = "^2024.11.2" }
dask-expr = ">=1.1.19"
debugpy = ">=1.8.9"
decorator = ">=5.1.1"
defusedxml = ">=0.7.1"
diagrams = ">=0.23.4"
distlib = ">=0.3.9"
dj-database-url = ">=2.2.0"
dj-email-url = ">=1.0.6"
dj-rest-auth = ">=6.0.0"
django = ">=5.1.3"
django-allauth = ">=64.2.1"
django-bootstrap-datepicker-plus = ">=5.0.5"
django-cache-url = ">=3.4.5"
django-celery-beat = ">=2.7.0"
django-cors-headers = ">=4.5.0"
django-crispy-forms = ">=2.3"
django-redis = ">=5.4.0"
django-storages = ">=1.14.4"
django-stubs = ">=5.1.0"
django-stubs-ext = ">=5.1.0"
django-timezone-field = ">=6.1.0"
djangorestframework = ">=3.15.2"
djangorestframework-simplejwt = ">=5.3.1"
environs = ">=11.0.0"
et-xmlfile = ">=1.1.0"
executing = ">=2.1.0"
ezdxf = ">=1.3.4"
fastjsonschema = ">=2.20.0"
filelock = ">=3.16.1"
fiona = ">=1.10.1"
fonttools = ">=4.54.1"
fqdn = ">=1.5.1"
fsspec = ">=2024.10.0"
geoalchemy2 = ">=0.15.2"
geomet = ">=1.1.0"
geopandas = ">=1.0.1"
graphviz = ">=0.20.3"
gssapi = ">=1.9.0"
gunicorn = ">=23.0.0"
h11 = ">=0.14.0"
hiredis = ">=3.0.0"
html5lib = ">=1.1"
httpcore = ">=1.0.7"
httpx = ">=0.27.2"
identify = ">=2.6.1"
idna = ">=3.10"
importlib-metadata = ">=7.2.1"
iniconfig = ">=2.0.0"
ipykernel = ">=6.29.5"
ipython = ">=8.28.0"
ipython-genutils = ">=0.2.0"
ipywidgets = ">=7.8.4"
isodate = ">=0.6.1"
isoduration = ">=20.11.0"
jaraco-classes = ">=3.4.0"
jedi = ">=0.19.1"
jinja2 = ">=3.1.4"
json5 = ">=0.9.25"
jsonpointer = ">=2.4"
jsonschema = ">=4.22.0"
jsonschema-specifications = ">=2023.12.1"
jupyter-client = ">=6.1.12"
jupyter-events = ">=0.9.1"
jupyter-server = ">=1.24.0"
jupyter-ydoc = ">=0.2.5"
jupyter-core = ">=5.7.2"
jupyter-server-fileid = ">=0.9.3"
jupyter-server-ydoc = ">=0.8.0"
jupyterlab = ">=4.2.5"
jupyterlab-widgets = ">=1.1.10"
jupyterlab-pygments = ">=0.3.0"
jupyterlab-server = ">=2.27.3"
keyring = ">=24.3.1"
kiwisolver = ">=1.4.7"
kombu = ">=5.4.2"
krb5 = ">=0.5.1"
locket = ">=1.0.0"
lxml = ">=5.3.0"
markupsafe = ">=2.1.5"
marshmallow = ">=3.23.0"
matplotlib = ">=3.9.2"
matplotlib-inline = ">=0.1.7"
mistune = ">=3.0.2"
mockredispy = ">=2.9.3"
more-itertools = ">=10.5.0"
munch = ">=4.0.0"
mypy = ">=1.13.0"
mypy-extensions = ">=1.0.0"
nbclassic = ">=1.1.0"
nbclient = ">=0.9.1"
nbconvert = ">=7.16.4"
nbformat = ">=5.10.4"
nest-asyncio = ">=1.6.0"
networkx = ">=3.4.1"
nodeenv = ">=1.9.1"
notebook = ">=7.2.2"
notebook-shim = ">=0.2.4"
numpy = ">=1.26.4"
oauthlib = ">=3.2.2"
openpyxl = ">=3.1.5"
packaging = ">=23.2"
pandas = ">=2.0.0,<2.2.0"
pandocfilters = ">=1.5.1"
parso = ">=0.8.4"
partd = ">=1.4.2"
pexpect = ">=4.9.0"
pickleshare = ">=0.7.5"
pillow = ">=10.4.0"
platformdirs = ">=3.11.0"
pluggy = ">=1.5.0"
pre-commit = ">=3.8.0"
prometheus-client = ">=0.20.0"
prompt-toolkit = ">=3.0.48"
psutil = ">=6.1.0"
ptyprocess = ">=0.7.0"
pure-eval = ">=0.2.3"
puremagic = ">=1.28"
pyarrow = ">=16.1.0"
pycparser = ">=2.22"
pydantic = ">=2.9.2"
pydantic-core = ">=2.23.4"
pydyf = ">=0.8.0"
pygments = ">=2.18.0"
pyjwt = ">=2.9.0"
pylerc = ">=4.0"
pyogrio = ">=0.7.2"
pyparsing = ">=3.2.0"
pyphen = ">=0.14.0"
pyproj = ">=3.7.0"
pyshp = ">=2.3.1"
pyspnego = ">=0.10.2"
pytest = ">=8.3.3"
pytest-django = ">=4.9.0"
pytest-mypy = ">=0.10.3"
python-crontab = ">=3.2.0"
python-dateutil = ">=2.9.0.post0"
python-dotenv = ">=1.0.1"
python-gettext = ">=5.0"
python-json-logger = ">=2.0.7"
python3-openid = ">=3.2.0"
pytz = ">=2023.4"
pyyaml = ">=6.0.2"
pyzmq = ">=26.2.0"
redis = ">=5.2.0"
referencing = ">=0.33.0"
requests = ">=2.31.0"
requests-gssapi = ">=1.3.0"
requests-kerberos = ">=0.14.0"
requests-oauthlib = ">=1.3.1"
requests-toolbelt = ">=1.0.0"
rfc3339-validator = ">=0.1.4"
rfc3986-validator = ">=0.1.1"
rpds-py = ">=0.18.1"
rtree = ">=1.3.0"
send2trash = ">=1.8.3"
shapely = ">=2.0.6"
six = ">=1.16.0"
sniffio = ">=1.3.1"
soupsieve = ">=2.6"
sqlparse = ">=0.4.4"
stack-data = ">=0.6.3"
terminado = ">=0.18.1"
tinycss2 = ">=1.3.0"
toolz = ">=0.12.1"
tornado = ">=6.4.2"
traitlets = ">=5.14.3"
truststore = ">=0.8.0"
typed-ast = ">=1.5.5"
types-python-dateutil = ">=2.9.0.20241003"
types-pyyaml = ">=6.0.12.20240917"
typing-extensions = ">=4.12.2"
tzdata = ">=2023.4"
ujson = ">=5.10.0"
uri-template = ">=1.3.0"
urllib3 = ">=2.2.3"
vine = ">=5.1.0"
virtualenv = ">=20.26.6"
wcwidth = ">=0.2.13"
webcolors = ">=1.13"
webencodings = ">=0.5.1"
websocket-client = ">=1.8.0"
whitenoise = ">=6.7.0"
widgetsnbextension = ">=3.6.9"
y-py = ">=0.6.2"
ypy-websocket = ">=0.8.4"
zipp = ">=3.20.2"
zopfli = ">=0.2.3"
psycopg = { extras = ["binary", "pool"], version = "^3.2.3" }
sqlalchemy = "^2.0.36"
opencv-python = "^4.10.0.84"
geopy = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py312"]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E501", "E741", "E402", "F403", "E722", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
